--- a/CarAppV3/app/src/main/res/layout/fragment_drawing_list.xml
+++ b/CarAppV3/app/src/main/res/layout/fragment_drawing_list.xml
@@ -6,7 +6,7 @@
     tools:context=".DrawingListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_view_1"
+        android:id="@+id/recycle_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
