--- a/CarAppV3/app/src/main/res/layout/recycler.xml
+++ b/CarAppV3/app/src/main/res/layout/recycler.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
+        android:textColor="@color/colorCeruleanBlue"
         android:layout_centerVertical="true">
     </TextView>
 
