setup details in design detail activity

--- a/CarAppV3/app/src/main/res/layout/activity_design_details.xml
+++ b/CarAppV3/app/src/main/res/layout/activity_design_details.xml
@@ -7,9 +7,11 @@
     tools:context=".DesignDetailsActivity">
 
     <TextView
+        android:id="@+id/design_detail_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Details">
+        android:textSize="30sp"
+        android:textColor="@color/colorCeruleanBlue">
 
     </TextView>
 </RelativeLayout>
