--- a/CarAppV3/app/src/main/res/menu/main_activity_menu.xml
+++ b/CarAppV3/app/src/main/res/menu/main_activity_menu.xml
@@ -8,5 +8,13 @@
         android:icon="@drawable/ic_add_circle_outline_white_24dp"
         android:title="action_add"
         app:showAsAction="ifRoom"/>
+    <!--
+    <item
+        android:id="@+id/action_open_menu"
+        android:icon="@drawable/ic_menu_white_24dp"
+        android:title="open_menu"
+        app:showAsAction="ifRoom">
+
+    </item>-->
 
 </menu>
