--- a/CarAppV3/app/src/main/res/layout/activity_new_drawing.xml
+++ b/CarAppV3/app/src/main/res/layout/activity_new_drawing.xml
@@ -6,11 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".NewDrawingActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Drawing">
-
-    </TextView>
+    <com.example.carappv3.DrawingView
+        android:id="@+id/drawingView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
