--- a/CarAppV3/app/src/main/res/values/colors.xml
+++ b/CarAppV3/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorCeruleanBlue">#0492C2</color>
     <color name="colorRoseRed">#E3242B</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorPineAppleYellow">#FEE12B</color>
+    <color name="colorPineArcticBlue">#82EEFD</color>
 </resources>
