--- a/CarAppV3/app/src/main/res/layout/activity_design_details.xml
+++ b/CarAppV3/app/src/main/res/layout/activity_design_details.xml
@@ -16,7 +16,7 @@
     </TextView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/wifi_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
