--- a/CarAppV3/app/src/main/res/layout/activity_design_details.xml
+++ b/CarAppV3/app/src/main/res/layout/activity_design_details.xml
@@ -25,8 +25,8 @@
 
     <SeekBar
         android:id="@+id/seekBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
         android:layout_above="@+id/wifi_button"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="100dp"
