--- a/CarAppV3/app/src/main/res/layout/activity_image_tracker.xml
+++ b/CarAppV3/app/src/main/res/layout/activity_image_tracker.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ImageTracker">
 
+
+    <Button
+        android:id="@+id/match_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
