--- a/CarAppV3/app/src/main/res/layout/activity_image_tracker.xml
+++ b/CarAppV3/app/src/main/res/layout/activity_image_tracker.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:opencv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ImageTracker">
+    tools:context="com.example.carappv3.ImageTracker">
 
-
-    <Button
-        android:id="@+id/match_image"
+    <org.opencv.android.JavaCameraView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:visibility="visible"
+        android:id="@+id/HelloOpenCvView"
+        opencv:show_fps="false"
+        opencv:camera_id="any" />
+
+</RelativeLayout>
