--- a/CarAppV5/app/src/main/res/layout/activity_tracker.xml
+++ b/CarAppV5/app/src/main/res/layout/activity_tracker.xml
@@ -17,5 +17,32 @@
 
     </TextureView>
 
+    <TextView
+        android:id="@+id/centerx_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorRoseRed"
+        android:textSize="32dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="400dp"
+        android:layout_marginRight="100dp" />
+
+    <TextView
+        android:id="@+id/centery_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorRoseRed"
+        android:textSize="32dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="100dp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
